{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 28,
  "lineage": "b83a951b-99c4-2980-94d5-47568d281c7a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igwA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:internet-gateway/igw-030fd34a96d4383ee",
            "id": "igw-030fd34a96d4383ee",
            "owner_id": "255945442255",
            "tags": {
              "Name": "christanykA-IGW"
            },
            "tags_all": {
              "Name": "christanykA-IGW"
            },
            "vpc_id": "vpc-069f950ef498c73b2"
          },
          "dependencies": [
            "aws_vpc.christanykA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igwB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:internet-gateway/igw-0827b72481a2cce0d",
            "id": "igw-0827b72481a2cce0d",
            "owner_id": "255945442255",
            "tags": {
              "Name": "christanykB-IGW"
            },
            "tags_all": {
              "Name": "christanykB-IGW"
            },
            "vpc_id": "vpc-0c703faf6ec4dd6e0"
          },
          "dependencies": [
            "aws_vpc.christanykB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "routeA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a7005f21c85363c61218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a7005f21c85363c6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0495eb8d3ad9a9d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.rtA",
            "aws_vpc.christanykA",
            "aws_vpc.christanykB",
            "aws_vpc_peering_connection.peer_vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "routeB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c203c35857d737093322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c203c35857d73709",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0495eb8d3ad9a9d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.rtB",
            "aws_vpc.christanykA",
            "aws_vpc.christanykB",
            "aws_vpc_peering_connection.peer_vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:route-table/rtb-0a7005f21c85363c6",
            "id": "rtb-0a7005f21c85363c6",
            "owner_id": "255945442255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0ec1736fe3daace14"
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-069f950ef498c73b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.christanykA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:route-table/rtb-0c203c35857d73709",
            "id": "rtb-0c203c35857d73709",
            "owner_id": "255945442255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0ec1736fe3daace14"
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c703faf6ec4dd6e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.christanykB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtaA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0890250dfe54c9f",
            "route_table_id": "rtb-0a7005f21c85363c6",
            "subnet_id": "subnet-096003b4b8050bf1f"
          },
          "dependencies": [
            "aws_route_table.rtA",
            "aws_subnet.subnetA",
            "aws_vpc.christanykA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtaB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e92dac403a47e39a",
            "route_table_id": "rtb-0c203c35857d73709",
            "subnet_id": "subnet-0bc7aa90e4fa93be8"
          },
          "dependencies": [
            "aws_route_table.rtB",
            "aws_subnet.subnetB",
            "aws_vpc.christanykB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:security-group/sg-0e5ac80f01d2c5ea0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5ac80f01d2c5ea0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "255945442255",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-069f950ef498c73b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.christanykA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:subnet/subnet-096003b4b8050bf1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096003b4b8050bf1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-069f950ef498c73b2"
          },
          "dependencies": [
            "aws_vpc.christanykA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:subnet/subnet-0bc7aa90e4fa93be8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc7aa90e4fa93be8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c703faf6ec4dd6e0"
          },
          "dependencies": [
            "aws_vpc.christanykB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "christanykA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:vpc/vpc-069f950ef498c73b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-06b52b3c5303d2c8c",
            "default_route_table_id": "rtb-005a78473b4566f35",
            "default_security_group_id": "sg-05004a27cbc755c86",
            "dhcp_options_id": "dopt-00230c43c6dec6359",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069f950ef498c73b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-005a78473b4566f35",
            "owner_id": "255945442255",
            "tags": {
              "Name": "christanykA-VPC"
            },
            "tags_all": {
              "Name": "christanykA-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "christanykB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:vpc/vpc-0c703faf6ec4dd6e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-09bd25a49f4111c3f",
            "default_route_table_id": "rtb-0722d550baf68c547",
            "default_security_group_id": "sg-070fa4c4a766b6d9c",
            "dhcp_options_id": "dopt-00230c43c6dec6359",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c703faf6ec4dd6e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0722d550baf68c547",
            "owner_id": "255945442255",
            "tags": {
              "Name": "christanykB-VPC"
            },
            "tags_all": {
              "Name": "christanykB-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer_vpcs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0495eb8d3ad9a9d88",
            "peer_owner_id": "255945442255",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0c703faf6ec4dd6e0",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "christanykA-christanykB-Peering"
            },
            "tags_all": {
              "Name": "christanykA-christanykB-Peering"
            },
            "vpc_id": "vpc-069f950ef498c73b2"
          },
          "dependencies": [
            "aws_vpc.christanykA",
            "aws_vpc.christanykB"
          ]
        }
      ]
    }
  ]
}